--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@chakra-ui/react": "^3.0.2",
+    "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@mui/material": "^6.1.6",
     "@prisma/client": "^5.21.1",
+    "@svgdotjs/svg.js": "^3.2.4",
+    "@svgdotjs/svg.panzoom.js": "^2.1.2",
     "axios": "^1.7.7",
     "cron": "^3.1.8",
     "next": "^15.0.2",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.0.2",
     "@types/node": "^20.17.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
